--- a/leetcode/字符串/初级字符串.md
+++ b/leetcode/字符串/初级字符串.md
@@ -9,8 +9,11 @@
   - [14. 最长公共前缀](#14-最长公共前缀)
   - [38.外观数列](#38外观数列)
   - [43. 字符串相乘](#43-字符串相乘)
+  - [415. 字符串相加](#415-字符串相加)
+  - [补充. 字符串相减（大数减法）](#补充-字符串相减大数减法)
   - [344.反转字符串](#344反转字符串)
   - [151. 翻转字符串的单词](#151-翻转字符串的单词)
+  - [557. 反转字符串中的单词III](#557-反转字符串中的单词iii)
   - [387. 字符串中的唯一字符](#387-字符串中的唯一字符)
   - [49. 字母异位词组合](#49-字母异位词组合)
   - [242. 有效的字母异位词](#242-有效的字母异位词)
@@ -247,7 +250,7 @@ public:
 - 乘法拆分成加法和乘法组合的形式
 - 考虑在加法/乘法中存在的进位问题，
 - 以及不同位置上乘法结果的对齐问题
-```
+```c++
 class Solution {
 public:
     string multiply(string num1, string num2) {
@@ -298,6 +301,106 @@ public:
     }
 };
 ```
+### 415. 字符串相加
+> 给定两个字符串形式的非负整数 num1 和num2 ，计算它们的和
+
+- 基础题目，对两个字符串从低位进行逐位计算即可
+- 注意往上增加值的处理
+
+```c++
+class Solution {
+public:
+    string addStrings(string num1, string num2) {
+        if (num1.size() > num2.size()) {
+            return addStrings(num2, num1);
+        }
+        string res;
+        int pre = 0;
+        int l1 = num1.size() - 1;
+        int l2 = num2.size() - 1;
+        while ((l1 >=0) && (l2 >= 0)) {
+            int a = num2[l2] - '0';
+            int b = num1[l1] - '0';
+            int tmp = a + b + pre;
+            res.push_back(tmp % 10 + '0');
+            pre = tmp/10;
+            l1--;
+            l2--;
+
+        }
+        while(l2 >= 0) {
+            int a = num2[l2] - '0';
+            int tmp = a + pre;
+            res.push_back(tmp % 10 + '0');
+            pre = tmp/10;
+            l2--;
+        }
+        if (pre) {
+            res.push_back('1');
+        }
+        reverse(res.begin(), res.end());
+        return res;
+    }
+};
+```
+### 补充. 字符串相减（大数减法）
+> 给定两个字符串形式的非负整数 num1 和num2 ，计算它们的差。
+
+- 减法比加法要复杂许多，但思路基本一致，要考虑一下情况：
+  - 结果为负的情况： **交换字符串，让大数-小数**
+  - 在减法的过程中要从低位进行操作，**向高位借位处理**
+  - 在保存结果时需要删除多余的前导0，但对于结果为0的情况，要避免全部删除
+- **掌握字符串的 加/减/乘操作**
+```c++
+string subStrings(string a, string b){
+    if (isLess(a,b))  {
+        string res = sub(b, a);
+        // 对于负号情况的判断
+        if (a != "0") res.insert('-');
+        return res;
+    }
+    return subStrings(a, b);
+}
+
+bool isLess(string a, string b) {
+    if (a.size() == b.size()) return a < b;
+    return a.size() < b.size();
+}
+
+string sub(string a, string b) {
+    int n = a.size();
+    int m = b.size();
+    int i = n - 1;
+    int j = m - 1;
+    int borrow = 0;
+    string res;
+    while (i >= 0 || j >= 0) {
+        int x = (j >= 0) ? (b[j] - '0') : 0;
+        int y = (i >= 0) ? (a[i] - '0') : 0;
+        int z = (y - x - borrow + 10) % 10;
+        // 确认是否存在借位的需求，当为负数的时候即需要向上借1
+        borrow = (y - x - borrow) < 0 ? 1 : 0; 
+        res.push_back(z + '0');
+        i--;
+        j--;
+    }
+    reverse(res.begin(), res.end());
+    // 删除前导0
+    
+    int pos = 0;
+    for (int i = 0; i < res.size() - 1; i++) {
+        if (res[i] != '0') {
+            pos = i;
+            break;
+        }
+        
+    }
+    return res.substr(pos);
+}
+
+```
+
+
 
 ### 344.反转字符串
 
@@ -333,7 +436,7 @@ public:
   - 然后进行内部翻转 reverse
 - 时间复杂度 O(N) 空间复杂度 O(1)
 
-```
+```c++
 class Solution {
 public:
     string reverseWords(string s) {
@@ -360,6 +463,50 @@ public:
         s.erase(s.begin() + idx, s.end());
         return s;
 
+    }
+};
+```
+### 557. 反转字符串中的单词III
+> 给定一个字符串，你需要反转字符串中每个单词的字符顺序，同时仍保留空格和单词的初始顺序。每个单词由单个空格分隔，并且字符串中不会有任何额外的空格。
+
+```
+输入："Let's take LeetCode contest"
+输出："s'teL ekat edoCteeL tsetnoc"
+```
+- **采用原地反转即可，关键在于确定反转的左右边界**， 与LC151翻转字符串单词有相似之处
+  - begin 左边界寻找上一个空格位置 `beg = - 1`因此初始化为-1
+  - end **右边界确定下一个空格位置**  `end = i + 1`需要比beg多一个位置
+  - 两个空格之间的即为反转需要的： `reverse( beg + 1,  end)`
+- 时间复杂度： O(N) 空间复杂度O(1)
+
+- 关键点： **`左右边界确定`**
+```c++
+class Solution {
+public:
+    string reverseWords(string s) {
+        int n = s.size();
+        int beg = -1;
+        int end = 0;
+        int i = 0;
+        while (i < n) {
+            if (s[i] == ' ') {
+                //cout << beg << " " << end << s[end]<< endl; 
+                if (end > beg) {
+                    reverse(s.begin() + beg + 1, s.begin() + end);
+                }
+                beg = i;
+                end = i + 1;
+            }
+            else {
+                end++;
+            }
+            i++;
+        }
+        //cout << beg << " " << end;
+        if (end - beg > 1) {
+            reverse(s.begin() + beg + 1, s.begin() + end);
+        }
+        return s;
     }
 };
 ```
