--- a/leetcode/数组/初级链表.md
+++ b/leetcode/数组/初级链表.md
@@ -17,8 +17,9 @@
   - [328. 奇偶数组  [Medium]](#328-奇偶数组--medium)
 - [链表删除节点](#链表删除节点)
   - [19. 删除链表的倒数第N个节点 [Medium]](#19-删除链表的倒数第n个节点-medium)
-  - [83. 删除排序链表中的重复元素](#83-删除排序链表中的重复元素)
+  - [83. 删除排序链表中的重复元素I](#83-删除排序链表中的重复元素i)
   - [82. 删除排序链表中的重复元素II **](#82-删除排序链表中的重复元素ii-)
+  - [面试题02.01.  移除重复节点 （非排序链表）](#面试题0201--移除重复节点-非排序链表)
   - [237. 删除链表指定节点](#237-删除链表指定节点)
 - [链表翻转与旋转操作](#链表翻转与旋转操作)
   - [61. 旋转链表](#61-旋转链表)
@@ -482,7 +483,7 @@ public:
     时间复杂度 O(L)  空间复杂度O(L)
 
 
-### 83. 删除排序链表中的重复元素
+### 83. 删除排序链表中的重复元素I
 > 存在一个**按升序排列的链表**，给你这个链表的头节点 head ，请你删除所有重复的元素，使每个元素 只出现一次 。
 
 - 与数组的处理方式一致，维护两个指针p 和 next
@@ -490,7 +491,7 @@ public:
   - 当前后不等时，两个指针都向后移动
 - 时间复杂度 O(N)
 - 关键点： **`双指针`** 
-```
+```c++
 class Solution {
 public:
     ListNode* deleteDuplicates(ListNode* head) {
@@ -531,7 +532,7 @@ public:
 - 时间复杂度 O(N)
 - 关键点： **`dummpy node`** **`双指针`** **`重复值判断`**
 
-```
+```c++
 class Solution {
 public:
     ListNode* deleteDuplicates(ListNode* head) {
@@ -559,7 +560,45 @@ public:
     }
 };
 ```
+### 面试题02.01.  移除重复节点 （非排序链表）
+> 编写代码，移除未排序链表中的重复节点。保留最开始出现的节点
 
+```
+输入：[1, 2, 3, 3, 2, 1]
+ 输出：[1, 2, 3]
+```
+- 与[LC82/83]基本一致，最大点在于如何处理非排序点链表
+- 可以**通过哈希表提前记录已经出现的节点值来进行一次遍历**，问题就变成跟之前一样的逻辑  
+  - 当前节点值未在哈希表出现时， `prev` 和 `cur` 指针正常后移
+  - 节点重复出现时， 调整`prev`指针的next方向， 但不后移(后面可能存在连续重复值嘛)
+
+- 时间复杂度 O(N)  空间复杂度 O(N)
+- 关键点： **`哈希表 + 链表双指针`**
+```c++
+class Solution {
+public:
+    ListNode* removeDuplicateNodes(ListNode* head) {
+        if (!head) return nullptr;
+        unordered_set<int> vis;
+        ListNode* p = head;
+        ListNode* prev = nullptr;
+        ListNode* next = nullptr;
+        while (p) {
+            if (vis.count(p -> val)) {
+                next = p -> next;
+                prev -> next = p -> next;
+                p = next;
+            }
+            else {
+                vis.insert(p -> val);
+                prev = p;
+                p = p -> next;
+            }
+        }
+        return head;
+    }
+};
+```
 
 ### 237. 删除链表指定节点
 > 删除某个链表中给定的（非末尾）节点。传入函数的唯一参数为**要被删除的节点**
