--- a/leetcode/数组/数组-中级.md
+++ b/leetcode/数组/数组-中级.md
@@ -1,9 +1,11 @@
 - [进阶](#进阶)
   - [31. 下一个排列 [Medium]](#31-下一个排列-medium)
+  - [剑指offer 03. 数组中重复的数字](#剑指offer-03-数组中重复的数字)
   - [41.缺失的第一个正数](#41缺失的第一个正数)
   - [42. 接雨水 [Hard] [*]](#42-接雨水-hard-)
   - [剑指62. 圆圈最后剩下的数字](#剑指62-圆圈最后剩下的数字)
   - [73. 矩阵置零  [Medium]](#73-矩阵置零--medium)
+  - [剑指offer 43. 1~n整数中1出现的次数](#剑指offer-43-1n整数中1出现的次数)
 - [滑动窗口解题技巧](#滑动窗口解题技巧)
   - [剑指57-II. 和为s的连续正数序列](#剑指57-ii-和为s的连续正数序列)
   - [76. 最小覆盖子串 [Hard] * [字节/百度]](#76-最小覆盖子串-hard--字节百度)
@@ -58,7 +60,38 @@ public:
     }
 };
 ```
+### 剑指offer 03. 数组中重复的数字
 
+> 在一个长度为 n 的数组 nums 里的**所有数字都在 0～n-1 的范围内**。数组中某些数字是重复的，但不知道有几个数字重复了，也不知道每个数字重复了几次。**请找出数组中任意一个重复的数字**
+
+- 最基本的做法： 哈希表方法，通过哈希表检查是否为重复数字， 时间复杂度O(N) 空间复杂度O(N)
+- 本题更出色的做法在于： **原地置换**
+  - 由于数字范围在0 ~ n-1之间，可以把每个数字置换到`nums[i] = i`的位置，重复数字则会出现重复置换，即多对一的情况
+  - 这种置换的思路在**[LC41.缺失的第一个正数]**中也有体现
+  - 注意实现的时候的循环逻辑，只有当**当前索引与值一致时才向后遍历**
+  - 时间复杂度 ： O(N) 空间复杂度 O(1)
+
+
+![avtar](offer03.png)
+```c++
+class Solution {
+public:
+    int findRepeatNumber(vector<int>& nums) {
+        int i = 0;
+        while( i < nums.size()) {
+            if (nums[i] == i) {
+                i++;
+                continue;
+            }
+            if (nums[i] == nums[nums[i]])
+                return nums[i];
+            
+            swap(nums[i], nums[nums[i]]);
+        }
+        return 0;
+    }
+};
+```
 
 ### 41.缺失的第一个正数
 > 给你一个未排序的整数数组 nums ，请你找出其中没有出现的最小的正整数。
@@ -155,7 +188,7 @@ public:
 
 ### 73. 矩阵置零  [Medium] 
 - 遍历
-```
+```c++
 class Solution {
 public:
     void setZeroes(vector<vector<int>>& matrix) {
@@ -181,6 +214,46 @@ public:
 };
 ```
 
+### 剑指offer 43. 1~n整数中1出现的次数
+> 输入一个整数 n ，求1～n这n个整数的十进制表示中1出现的次数。
+> 输入12，1～12这些整数中包含1 的数字有1、10、11和12，1一共出现了5次。
+
+- 讨论**不同情况下的1出现情况**
+  - 将当前数字n按照位数划分为high位 cur low位
+  - 逐位进行计算; 以2304为例， cur = 0 high = 23 low = 4 digit = 10
+  - 当前位cur == 0时， 出现1的次数为 high * digit 
+  - cur == 1 时 , high * digit + low + 1
+  - cur > 2 时， (high + 1) * digit 
+  - 终止条件： high == 0 && cur == 0
+
+```c++
+class Solution {
+public:
+    int countDigitOne(int n) {
+        long cur = n % 10;
+        long digit = 1;
+        long high = n / 10;
+        long low = 0;
+        long res = 0;
+        while (cur != 0 || high != 0) {
+            if (cur == 0) {
+                res += high * digit;
+            }
+            else if (cur == 1) {
+                res += high * digit + low + 1;
+            }
+            else {
+                res += (high + 1)* digit;
+            }
+            low += digit * cur;
+            cur = high % 10;
+            high /= 10;
+            digit *= 10;
+        }
+        return res;
+    }
+};
+```
 
 ## 滑动窗口解题技巧
 
