--- a/leetcode/树结构/初级树结构.md
+++ b/leetcode/树结构/初级树结构.md
@@ -37,12 +37,13 @@
   - [101. 对称二叉树](#101-对称二叉树)
 - [树的构建](#树的构建)
   - [108. 有序数组转搜索二叉树 [KEY]](#108-有序数组转搜索二叉树-key)
-  - [从中序和后序中构建二叉树](#从中序和后序中构建二叉树)
+  - [106.从中序和后序中构建二叉树](#106从中序和后序中构建二叉树)
   - [先序加中序构建二叉树](#先序加中序构建二叉树)
   - [116. 填充每个节点的下一个右侧节点指针 I](#116-填充每个节点的下一个右侧节点指针-i)
   - [117. 填充每个节点的下一个右侧节点指针 II](#117-填充每个节点的下一个右侧节点指针-ii)
   - [二叉树的最近公共祖先](#二叉树的最近公共祖先)
   - [二叉树的序列化与反序列化 [HARD]](#二叉树的序列化与反序列化-hard)
+  - [654. 最大二叉树](#654-最大二叉树)
 - [树的查找](#树的查找)
   - [剑指26. 树的子结构 [Medium] [Tencent]](#剑指26-树的子结构-medium-tencent)
   - [230. 二叉搜索树BST中第K小的元素  [Medium]](#230-二叉搜索树bst中第k小的元素--medium)
@@ -634,7 +635,7 @@ public:
 
 
 
-### 从中序和后序中构建二叉树
+### 106.从中序和后序中构建二叉树
 - 寻找根节点位置，并确定根节点在何处划分左右子树
 - 主要注意遍历方向
 ```c++
@@ -877,6 +878,46 @@ public:
     }
 };
 ```
+### 654. 最大二叉树
+
+>  给定一个不含重复元素的整数数组 nums 。一个以此数组直接递归构建的 **最大二叉树** 定义如
+> 二叉树的根是数组 nums 中的最大元素。
+左子树是通过数组中 **最大值左边部分** 递归构造出的最大二叉树。
+右子树是通过数组中 **最大值右边部分** 递归构造出的最大二叉树。
+
+- 基础的二叉树构建问题，与构建二叉搜索树的思路基本一致。
+- 采用**自顶而下**的遍历逻辑，先寻找root节点，然后确定左右子树的搜索空间
+- 进行递归构建
+  - 临界情况： 递归终止条件： 左右边界非法： `left > right`
+  - 寻找root节点的方法： 在区间内遍历搜索最大值即可
+- 这类题目真的是*会一道就会十道*， 总体看二叉树题目的难度分布比较均匀，难题相对较少，**属于入门难，熟练易**
+
+- 空间复杂度O(N) 时间复杂度 O(nlogN) 最差情况下 O(N^2) 考虑遍历的时间和构建树的时间，当数组有序的时候构建树就无法二分操作
+
+```c++
+class Solution {
+public:
+    TreeNode* build(vector<int>& nums, int left, int right) {
+        if (left > right) return nullptr;
+        int rv = INT_MIN;
+        int index = left;
+        for (int i = left; i <= right; i++) {
+            if (rv < nums[i]) {
+                rv = nums[i];
+                index = i;
+            }
+        }
+        TreeNode* root = new TreeNode(rv);
+        root -> left = build(nums, left, index - 1);
+        root -> right = build(nums, index + 1, right);
+        return root;
+    }
+    TreeNode* constructMaximumBinaryTree(vector<int>& nums) {
+        return build(nums, 0, nums.size() - 1);
+    }
+};
+```
+
 ## 树的查找
 ### 剑指26. 树的子结构 [Medium] [Tencent]
 - 二叉树的应用
