更新字符串

--- a/leetcode/字符串/初级字符串.md
+++ b/leetcode/字符串/初级字符串.md
@@ -18,14 +18,15 @@
   - [49. 字母异位词组合](#49-字母异位词组合)
   - [242. 有效的字母异位词](#242-有效的字母异位词)
 - [字符串匹配问题](#字符串匹配问题)
+  - [28. 实现strStr() 子串匹配查找 *](#28-实现strstr-子串匹配查找-)
   - [459. 重复的子字符串](#459-重复的子字符串)
+  - [796. 旋转字符串](#796-旋转字符串)
 - [回文串](#回文串)
   - [5. 最长回文子串 [Medium] [ByteDance]](#5-最长回文子串-medium-bytedance)
   - [125. 回文串验证](#125-回文串验证)
   - [516. 最长回文子序列](#516-最长回文子序列)
 - [字符串转换问题](#字符串转换问题)
   - [8.字符串转换整数 (atoi) Mid *](#8字符串转换整数-atoi-mid-)
-  - [28. 实现strStr() 子串匹配查找 *](#28-实现strstr-子串匹配查找-)
 - [综合问题](#综合问题)
   - [3. 无重复字符的最长子串 * [Medium] [Tencent/字节]](#3-无重复字符的最长子串--medium-tencent字节)
   - [334. 递增的三元子序列 [Medium]](#334-递增的三元子序列-medium)
@@ -635,6 +636,103 @@ public:
 };
 ```
 ## 字符串匹配问题
+主要利用C++中的查找api **find()**  
+或者**手写复现KMP算法**来进行更高效的匹配
+### 28. 实现strStr() 子串匹配查找 *
+
+- **KMP查找算法**，定义最大相同前后缀长度，计算子串各位置的最大前缀长度，当出现不匹配时根据最大前缀长度进行回退 时间复杂度(O(N))
+- 常见面试题，需要深入了解并记住该原理，可以动态规划求解：前缀是指不包含最后一个字符的所有以第一个字符开头的连续子串；后缀是指不包含第一个字符的所有以最后一个字符结尾的连续子串
+- 字符串匹配算法：还有Sunday 匹配机制相对比较简单： 
+
+```c++
+class Solution {
+public:
+    void get_next(vector<int> &next,string &s){
+        int j=-1;
+        next[0]=j;
+        for(int i=1;i<s.length();i++){
+            //回溯
+            while(j>=0&&s[j+1]!=s[i])
+            {
+                j=next[j];
+            }
+            if(s[j+1]==s[i]){
+                j++;
+            }
+            next[i]=j;
+        }
+    }
+    int strStr(string haystack, string needle) {
+        if(needle.length()==0) return 0;
+        vector<int> next(needle.length());
+        get_next(next,needle);
+        int j=-1;
+        for(int i=0; i<haystack.length();i++){
+            int ns=0;
+            while(j>=0&&haystack[i]!=needle[j+1]){
+                j=next[j];
+            }
+            if(haystack[i]==needle[j+1]){
+                j++;
+            }
+            
+            if(j==needle.size()-1)
+            return (i-needle.size()+1);
+            
+        }
+    return -1;
+    }
+};
+```
+
+- 更简单的匹配方法：记录待匹配子串的位移表，即每一个在子串 中出现的字符，在子串中出现的最右位置到尾部的距离+1，即记录在匹配失败后的最小移动长度
+- 在匹配失败后根据位移表，调整目标串的遍历指针位置，如果下个字符出现在子串中，根据位移表进行指针移动；否则直接将位置移动len+1个位置。
+- 时间复杂度O(n)，最差情况：O(mn)
+```
+class Solution {
+public:
+    
+    int strStr(string haystack, string needle) {
+        if(needle.length()==0) return 0;
+        unordered_map<int,int> shift;
+        int len=needle.length();
+        for(int i=len-1;i>=0;i--){
+            if(shift.count(needle[i]))
+            continue;
+            shift[needle[i]]=len-i;
+        }
+        int ns=0;
+        int start=0;
+        int i=start;
+        while( i<haystack.length()){
+            if(haystack[i]!=needle[ns]){
+                if(start+len<haystack.length()){
+                    if(shift.count(haystack[start+len])){
+                        start=start+shift[haystack[start+len]];
+                    }else{
+                        start=start+len+1;
+                    }
+                    i=start;
+                }
+                else{
+                    return -1;
+                }
+                ns=0;
+            }
+            else{
+                ns++;
+                i++;
+                if(ns==needle.length()){
+                    return start;
+                }
+            }
+        }
+
+    return -1;
+    }
+};
+```
+
 ### 459. 重复的子字符串
 > 给定一个非空的字符串，判断它是否可以由它的一个子串重复多次构成
 > 输入: "abab" 输出: True
@@ -699,6 +797,56 @@ public:
     }
     bool repeatedSubstringPattern(string s) {
         return kmp((s + s), s, 1);
+    }
+};
+```
+
+### 796. 旋转字符串
+> 给定两个字符串, A 和 B。A 的旋转操作就是将 A 最左边的字符移动到最右边。 例如, 若 A = 'abcde'，在移动一次之后结果就是'bcdea' 。如果在若干次旋转操作之后，A 能变成B，那么返回True。
+
+- 与[LC459题目]相似,在暴力法之外，需要考虑字符串匹配问题
+- 将问题转换为 **A + A串中是否包含 B 串**
+- 跟上题目一样可以使用KMP匹配算法来完成：时间复杂度 O(N) 空间复杂度 O(N)
+- [优质KMP思路介绍](https://leetcode-cn.com/problems/implement-strstr/solution/kmp-suan-fa-xiang-jie-by-labuladong/)
+
+
+```c++
+class Solution {
+public:
+    vector<int> getNext(string B) {
+        vector<int> next(B.size(), -1);
+        for (int i = 1; i < B.size(); i++) {
+            int k = next[i - 1];
+            while (k != -1 && B[k + 1] != B[i]) {
+                k = next[k];
+            }
+            if (B[k + 1] == B[i]) {
+                next[i] = k + 1;
+            }
+        }
+        return next;
+    }
+    bool kmp(string A, string B, int beg) {
+        int n = A.size();
+        int m = B.size();
+        vector<int> next = getNext(B);
+        int k = -1;
+        for (int i = beg; i < n; i++) {
+           while (k != -1 && B[k + 1] != A[i]) {
+               k = next[k];
+           }
+           if (B[k + 1] == A[i]) {
+               k++;
+               if (k == m - 1)
+                return true;
+           }
+        }
+        return false;
+    }
+    bool rotateString(string A, string B) {
+        if (A == B) return true;
+        return A.size() == B.size() && kmp(A + A, B, 0);
+        //return A.size() == B.size() && (A + A).find(B) < A.size();
     }
 };
 ```
@@ -1005,100 +1153,6 @@ public:
         }
         return res;
 
-    }
-};
-```
-### 28. 实现strStr() 子串匹配查找 *
-
-- **KMP查找算法**，定义最大相同前后缀长度，计算子串各位置的最大前缀长度，当出现不匹配时根据最大前缀长度进行回退 时间复杂度(O(N))
-- 常见面试题，需要深入了解并记住该原理，可以动态规划求解：前缀是指不包含最后一个字符的所有以第一个字符开头的连续子串；后缀是指不包含第一个字符的所有以最后一个字符结尾的连续子串
-- 字符串匹配算法：还有Sunday 匹配机制相对比较简单： 
-
-```c++
-class Solution {
-public:
-    void get_next(vector<int> &next,string &s){
-        int j=-1;
-        next[0]=j;
-        for(int i=1;i<s.length();i++){
-            //回溯
-            while(j>=0&&s[j+1]!=s[i])
-            {
-                j=next[j];
-            }
-            if(s[j+1]==s[i]){
-                j++;
-            }
-            next[i]=j;
-        }
-    }
-    int strStr(string haystack, string needle) {
-        if(needle.length()==0) return 0;
-        vector<int> next(needle.length());
-        get_next(next,needle);
-        int j=-1;
-        for(int i=0; i<haystack.length();i++){
-            int ns=0;
-            while(j>=0&&haystack[i]!=needle[j+1]){
-                j=next[j];
-            }
-            if(haystack[i]==needle[j+1]){
-                j++;
-            }
-            
-            if(j==needle.size()-1)
-            return (i-needle.size()+1);
-            
-        }
-    return -1;
-    }
-};
-```
-
-- 更简单的匹配方法：记录待匹配子串的位移表，即每一个在子串 中出现的字符，在子串中出现的最右位置到尾部的距离+1，即记录在匹配失败后的最小移动长度
-- 在匹配失败后根据位移表，调整目标串的遍历指针位置，如果下个字符出现在子串中，根据位移表进行指针移动；否则直接将位置移动len+1个位置。
-- 时间复杂度O(n)，最差情况：O(mn)
-```
-class Solution {
-public:
-    
-    int strStr(string haystack, string needle) {
-        if(needle.length()==0) return 0;
-        unordered_map<int,int> shift;
-        int len=needle.length();
-        for(int i=len-1;i>=0;i--){
-            if(shift.count(needle[i]))
-            continue;
-            shift[needle[i]]=len-i;
-        }
-        int ns=0;
-        int start=0;
-        int i=start;
-        while( i<haystack.length()){
-            if(haystack[i]!=needle[ns]){
-                if(start+len<haystack.length()){
-                    if(shift.count(haystack[start+len])){
-                        start=start+shift[haystack[start+len]];
-                    }else{
-                        start=start+len+1;
-                    }
-                    i=start;
-                }
-                else{
-                    return -1;
-                }
-                ns=0;
-            }
-            else{
-                ns++;
-                i++;
-                if(ns==needle.length()){
-                    return start;
-                }
-            }
-        }
-
-    return -1;
     }
 };
 ```
