--- a/leetcode/数组/初级链表.md
+++ b/leetcode/数组/初级链表.md
@@ -35,6 +35,7 @@
   - [86. 分隔链表](#86-分隔链表)
   - [143. 重排链表](#143-重排链表)
   - [146. LRU cache结构设计 [Medium]](#146-lru-cache结构设计-medium)
+  - [460. LFU cache结构设计 hard](#460-lfu-cache结构设计-hard)
   - [补充题： 排序奇升偶降链表 [字节 *]](#补充题-排序奇升偶降链表-字节-)
   - [小结](#小结)
 
@@ -1130,7 +1131,7 @@ public:
 - 通过自己**定义节点结构体来完成设计**
   - 为了代码简洁：可以设计`addToHead` `MoveToHead` `removeNode` 不同的功能
 - 关键点： **`双向链表`**  **`删除/插入节点操作`**
-```
+```c++
 class LRUCache {
 public:
     // 双向链表
@@ -1216,6 +1217,103 @@ public:
 };
 ```
 
+
+### 460. LFU cache结构设计 hard
+> 最不经常使用（LFU）缓存算法设计并实现数据结构。
+> - int get(int key) - 如果键存在于缓存中，则获取键的值，否则返回 -1。
+> - void put(int key, int value) - 如果键已存在，则变更其值；如果键不存在，请插入键值对。当缓存达到其容量时，则应该在插入新项之前，使最不经常使用的项无效。在此问题中，当存在平局（即两个或更多个键具有相同使用频率）时，应该去除**最近最久未使用**的键。
+
+- 设计思想： 与LRU基本相似，差别在于LFU比LRU要多一个频次判断， 需要删除使用次数最少的，在相同频次下删除最久未使用的
+- 结构上仍然是**哈希表+双向链表**的实现逻辑，在具体代码中我们没有自定义双向链表，而是采用**std中的list结构**
+- 结构设计：
+  -  **频次表**： 记录使用频次对应的节点双向链表
+  -  **键值表**： 记录每个key对应的节点位置，位置表示为其所在双向链表的定位(iterator位置)
+- **插入逻辑**：
+  1. **判断是否key值已经出现过**，出现过则进行节点更新操作，与put操作基本一致  
+  2. 未出现过，则需要**判断是否cache已满**
+  3. 满的情况下， 删除min freq列表的最后一个节点， 相应的删除key_table中的索引 
+  4. 未满的情况下，直接往freq = 1的链表中插入即可，**每次插入都往头部插入，保证时间有序**
+- 每次操作都要对两个链表进行操作，才能保证结果正确。
+
+```c++
+class LFUCache {
+public:
+    struct Node {
+        int key, val, freq;
+        Node(int k, int v, int f): key(k), val(v), freq(f) {}
+    };
+    unordered_map<int, list<Node>> freq_table;
+    unordered_map<int, list<Node>::iterator> key_table;
+    int minfreq;
+    int capacity;
+    LFUCache(int _capacity) {
+        capacity = _capacity;
+        minfreq = 0;
+        key_table.clear();
+        freq_table.clear();
+    }
+    
+    int get(int key) {
+        if (key_table.count(key)) {
+            auto it = key_table[key];
+            int v = it -> val;
+            int freq = it -> freq;
+            // 从当前freq链表删除节点
+            freq_table[freq].erase(it);
+            if (freq_table[freq].size() == 0) {
+                freq_table.erase(freq);
+                if (minfreq == freq) minfreq = freq + 1;
+            }
+            freq_table[freq + 1].push_front(Node(key, v, freq + 1));
+            // 插入在链表头部， 因此也更新相应的结果
+            key_table[key] = freq_table[freq + 1].begin();
+            return v;
+        }
+        return -1;
+    }
+    
+    void put(int key, int value) {
+        
+        if (capacity <= 0) return;
+        
+        if (key_table.count(key)) {
+            auto node = key_table[key];
+            int freq = node -> freq;
+            freq_table[freq].erase(node);
+            if (freq_table[freq].size() == 0) {
+                freq_table.erase(freq);
+                if (minfreq == freq) minfreq = freq + 1;
+            }
+            freq_table[freq + 1].push_front(Node(key, value, freq + 1));
+            // 插入在链表头部， 因此也更新相应的结果
+            key_table[key] = freq_table[freq + 1].begin();
+
+        }
+        // 创造新的节点 并插入数据中
+        else {
+            // 将过期节点移除
+            if (key_table.size() == capacity) {
+                key_table.erase(freq_table[minfreq].back().key);
+                freq_table[minfreq].pop_back();
+                if (freq_table[minfreq].size() == 0) {
+                    freq_table.erase(minfreq);
+                }   
+            }
+            // 每次更新都要涉及两个哈希表， key 和 freq 表都要进行相应的更新
+            freq_table[1].push_front(Node(key, value, 1));
+            key_table[key] = freq_table[1].begin();
+            minfreq = 1;
+        }
+    }
+};
+
+/**
+ * Your LFUCache object will be instantiated and called as such:
+ * LFUCache* obj = new LFUCache(capacity);
+ * int param_1 = obj->get(key);
+ * obj->put(key,value);
+ */
+```
 
 ### 补充题： 排序奇升偶降链表 [字节 *]
 - https://mp.weixin.qq.com/s/377FfqvpY8NwMInhpoDgsw
