--- a/leetcode/数组/数组-中级.md
+++ b/leetcode/数组/数组-中级.md
@@ -187,29 +187,82 @@ public:
 
 
 ### 73. 矩阵置零  [Medium] 
-- 遍历
+> 给定一个 m x n 的矩阵，如果一个元素为 0 ，则将其所在行和列的所有元素都设为 0 。请使用 原地 算法。
+
+- 简单的遍历即可，**通过标记数组来记录当前行/列是否有0**，如下时间复杂度O(mn) 空间复杂度O(N)
+- 关键点： **`标记数组`**  **`原地置换`**
 ```c++
 class Solution {
 public:
     void setZeroes(vector<vector<int>>& matrix) {
-        vector<int> cols;
-        for (int i = 0; i < matrix.size(); i++) {
+        int n = matrix.size();
+        int m = matrix[0].size();
+        set<int> cols;
+        for (int i = 0; i < n; i++) {
             bool flag = false;
-            for (int j = 0; j < matrix[0].size(); j++) {
+            for (int j = 0; j < m; j++) {
                 if (matrix[i][j] == 0) {
-                    cols.push_back(j);
+                    cols.insert(j);
                     flag = true;
                 }
             }
-            if (flag)
-                matrix[i].assign(matrix[i].size(), 0);
+            if (flag) {
+                matrix[i].assign(m, 0);
+            }
         }
-        for (int i = 0; i < matrix.size(); i++) {
+        for (int i = 0; i < n; i++) {
             for (auto j : cols) {
                 matrix[i][j] = 0;
             }
         }
-        
+    }
+};
+```
+- 进一步优化空间，实现常量级空间：使用矩阵第一行和第一列来标记是否有0， 进行两次矩阵遍历得到结果；
+- 最后再更新第一行和第一列。
+```c++
+class Solution {
+public:
+    void setZeroes(vector<vector<int>>& matrix) {
+        int n = matrix.size();
+        int m = matrix[0].size();
+        bool row0 = false;
+        bool col0 = false;
+        for (int i = 0; i < n; i++) {
+            if (matrix[i][0] == 0) {
+                row0 = true;
+            }
+        }
+        for (int i = 0; i < m; i++) {
+            if (matrix[0][i] == 0) {
+                col0 = true;
+            }
+        }
+
+        for (int i = 1; i < n; i++) {
+            for (int j = 1; j < m; j++) {
+                if (matrix[i][j] == 0) {
+                    matrix[i][0] = matrix[0][j] = 0;
+                }
+            }
+        }
+        for (int i = 1; i < n; i++) {
+            for (int j = 1; j < m; j++) {
+                if (!matrix[i][0] || !matrix[0][j]) {
+                    matrix[i][j] = 0;
+                }
+            }
+        }
+        if (row0) {
+            for (int i = 0; i < n; i++) {
+                matrix[i][0] = 0;
+            }
+        }
+        if (col0) {
+            for (int i = 0; i < m; i++) {
+                matrix[0][i] = 0;
+            }
+        }
     }
 };
 ```
