更新最大子矩阵

--- a/leetcode/动态规划/动态规划-初级.md
+++ b/leetcode/动态规划/动态规划-初级.md
@@ -5,6 +5,7 @@
   - [剑指10-1.斐波那契数列](#剑指10-1斐波那契数列)
   - [70. 爬楼梯问题](#70-爬楼梯问题)
   - [53. 最大子序和 *](#53-最大子序和-)
+  - [面试题 17.24. 最大子矩阵*](#面试题-1724-最大子矩阵)
 - [买卖股票](#买卖股票)
   - [121. 买卖股票的最佳时机 *](#121-买卖股票的最佳时机-)
   - [122. 买卖股票的最佳时间 2 *](#122-买卖股票的最佳时间-2-)
@@ -261,6 +262,63 @@ public:
         //vector<int> res(nums.size());
         return get(0,nums.size()-1,nums).mSum;
         
+    }
+};
+```
+### 面试题 17.24. 最大子矩阵*
+> 给定一个正整数、负整数和 0 组成的 N × M 矩阵，**编写代码找出元素总和最大的子矩阵**。 返回一个数组 [r1, c1, r2, c2]，其中 r1, c1 分别代表子矩阵左上角的行号和列号，r2, c2 分别代表右下角的行号和列号。若有多个满足条件的子矩阵，返回任意一个均可。
+```
+输入：
+[
+   [-1,0],
+   [0,-1]
+]
+输出：[0,1,0,1]
+```
+
+- 最大子序和 + 前缀和, 与[LC53.最大子序和]的差异在于从一维变成了二维，并且需要返回起始和结束位置的坐标
+- 整体的递归公式仍然不变，当变更当前dp时 （dp = nums[i]）时需要更新起点位置
+  - 此外，还涉及到前缀和的问题
+  - 在二维情况下： `dp[i][j] = max(dp[i][j - 1] + preSum_j, dp[i-1][j] + preSum_i, matrix[i][j])`
+  - 由于是计算最大矩阵，前缀和需要与起点坐标对齐，这个地方还是比较难处理
+- 借鉴别人的写法，使用一个辅助数组记录列方向的前缀和，同时采用双层循环，分别设置起点的位置，和终点的行位置
+  - 在循环内部利用一维的最大子序和进行结果更新即可
+- 关键点： **`前缀和思想`**  **`最大子序和`** **`循环方式`**
+```c++
+class Solution {
+public:
+    vector<int> getMaxMatrix(vector<vector<int>>& matrix) {
+        int n = matrix.size();
+        int m = matrix[0].size();
+        vector<int> ans(4);
+        int max_sum = matrix[0][0];
+        //vector<int> tmp(m, 0);
+        int bx = 0, by = 0;
+        for (int i = 0; i < n; i++) {
+            vector<int> tmp(m, 0);
+            for (int j = i; j < n; j++) {
+                int sum = 0;
+                for (int k = 0; k < m; k++) {
+                    tmp[k] += matrix[j][k];
+                    if (sum > 0) {
+                        sum += tmp[k];
+                    }
+                    else {
+                        sum = tmp[k];
+                        bx = i;
+                        by = k;
+                    }
+                    if (sum > max_sum) {
+                        max_sum = sum;
+                        ans[0] = bx;
+                        ans[1] = by;
+                        ans[2] = j;
+                        ans[3] = k;
+                    }
+                }
+            }
+        }
+        return ans;
     }
 };
 ```
