--- a/leetcode/字符串/初级字符串.md
+++ b/leetcode/字符串/初级字符串.md
@@ -18,6 +18,7 @@
   - [49. 字母异位词组合](#49-字母异位词组合)
   - [242. 有效的字母异位词](#242-有效的字母异位词)
 - [字符串匹配问题](#字符串匹配问题)
+  - [KMP算法理解与实现 *](#kmp算法理解与实现-)
   - [28. 实现strStr() 子串匹配查找 *](#28-实现strstr-子串匹配查找-)
   - [459. 重复的子字符串](#459-重复的子字符串)
   - [796. 旋转字符串](#796-旋转字符串)
@@ -638,6 +639,83 @@ public:
 ## 字符串匹配问题
 主要利用C++中的查找api **find()**  
 或者**手写复现KMP算法**来进行更高效的匹配
+
+### KMP算法理解与实现 *
+https://leetcode-cn.com/problems/implement-strstr/solution/kmp-suan-fa-xiang-jie-by-labuladong/
+
+- 两个字符串进行匹配，定义主串(query)和模式串(pattern)
+- 如何减少暴力搜索的匹配次数是KMP要解决的问题：
+  - 通过**调整模式串的移动方式来避免重复的移动**
+  - KMP算法的关键就在于如何设计模式串的移动/匹配规则
+- 基于有限状态机进行理解：pat： `ABABC` 当匹配到不同的主串字符时的移动情况，可以用下面的状态转移图表示
+
+![avtar](kmp1.png)
+![avtar](kmp2:png.png)
+- 那么如果构建这样的状态图呢？**关键在于当前状态如何回退**，正常情况下往下遍历很简单，但是当出现不匹配时如何进行有效的回退，也就是状态转移图中的返回。
+- 基于标准代码进行分析：
+  - 暴力法中的回退法则就是遇到不相等的字符就从模式串头部开始遍历，也就是所有字符都是`next[i] = 0`
+  - 这里用next[i] 表示**如果出现模式串`p[i]!=T[j]`时，下一个回退的位置**
+  - 基本情况： 
+    - 当在模式串第一个字符就不等时， **这时模式串无法回退，应该是主串指针后移**， 设置特殊状态：`next[0] = -1`表示主串后移
+  - ![avtar](kmp3.png)
+  - 那么更通用的情况下：当前位置的前一位置[i-1]的回退位置为k，如果模式串p[k+1]==p[j], 那么当前回退位置就是k + 1，即`next[i] = k + 1`
+  - 若模式串`p[k+1]!=p[j]`,那么这里就要往前回退，`k = next[k]`，寻找最优的前缀
+  - **整个过程是在寻找最长前后缀长度，但利用上面的分析过程会更容易理解整个实现过程**
+```c++
+vector<int> getNext(string ps) {
+    vector<int> next(ps.size(), -1);
+    for (int i = 1; i < ps.size(); i++) {
+        int k = next[i - 1];
+        while (k != -1 && ps[k + 1] != ps[i]) {
+            k = next[k];
+        }
+        if (ps[k + 1] == ps[i]) {
+            next[i] = k + 1;
+        }
+    }
+    return next;
+}
+```
+
+- 完整KMP代码如下： **建议全文背诵**
+    - 匹配过程与取next过程基本一致，按照相同逻辑进行模式串回退即可
+    - 时间复杂度O(N) 空间复杂度O(N)
+```c++
+class Solution {
+public:
+    vector<int> getNext(string pat) {
+        vector<int> next(pat.size(), -1);
+        for (int i = 1; i < pat.size(); i++) {
+            int k = next[i - 1];
+            while (k != -1 && pat[k + 1] != pat[i])
+                k = next[k];
+            if (pat[k + 1] == pat[i]) {
+                next[i] = k + 1;
+            } 
+        }
+        return next;
+    }
+    int strStr(string haystack, string needle) {
+        if (needle.size() == 0) return 0;
+        int n = haystack.size();
+        int m = needle.size();
+        vector<int> next = getNext(needle);
+        int j = -1;
+        for (int i = 0; i < n; i++) {
+            while (j != -1 && needle[j + 1] != haystack[i]) {
+                j = next[j];
+            } 
+            if (needle[j + 1] == haystack[i]) {
+                j++;  
+                if (j == m - 1)
+                    return (i - m + 1);
+            }
+        }
+        return -1;
+    }
+};
+```
+
 ### 28. 实现strStr() 子串匹配查找 *
 
 - **KMP查找算法**，定义最大相同前后缀长度，计算子串各位置的最大前缀长度，当出现不匹配时根据最大前缀长度进行回退 时间复杂度(O(N))
