--- a/leetcode/树结构/初级树结构.md
+++ b/leetcode/树结构/初级树结构.md
@@ -53,6 +53,7 @@
   - [110. 平衡二叉树的判断](#110-平衡二叉树的判断)
   - [404. 左叶子之和](#404-左叶子之和)
   - [199. 二叉树的右视图](#199-二叉树的右视图)
+  - [617. 合并二叉树](#617-合并二叉树)
   - [958. 二叉树的完全性校验](#958-二叉树的完全性校验)
   - [129. 求根节点到叶子节点数字之和](#129-求根节点到叶子节点数字之和)
 - [二叉树中的路径问题](#二叉树中的路径问题)
@@ -1257,6 +1258,29 @@ public:
     }
 };
 ```
+
+### 617. 合并二叉树
+> 给定两个二叉树，想象当你将它们中的一个覆盖到另一个上时，两个二叉树的一些节点便会重叠; 合并的规则是如果**两个节点重叠，那么将他们的值相加作为节点合并后的新值**，否则不为 NULL 的节点**将直接作为新二叉树的节点**。
+- 二叉树简单题，感觉二叉树80%的技能已经掌握了
+  - 只要明确了遍历方向： 先序还是后序
+  - 然后确定操作逻辑即可，无脑套模板都可以应对
+- 本题也是如此，自顶而下，**每次更新当前root1的val值，对于null的情况加额外判断即可**
+```c++
+class Solution {
+public:
+    TreeNode* mergeTrees(TreeNode* root1, TreeNode* root2) {
+        if (!root1 && !root2) return nullptr;
+        if (!root1) return root2;
+        if (!root2) return root1;
+        root1 -> val = root1 -> val + root2 -> val;
+        root1 -> left = mergeTrees(root1 -> left, root2 -> left);
+        root1 -> right = mergeTrees(root1 -> right, root2 -> right);
+        return root1;
+    }
+};
+```
+
+
 ### 958. 二叉树的完全性校验
 - **检查一个二叉树是否为完全二叉树**
   - 关键： 确定二叉树出现**空节点后是否还会有空节点** （同层）
