--- a/leetcode/数组/初级链表.md
+++ b/leetcode/数组/初级链表.md
@@ -20,6 +20,7 @@
   - [83. 删除排序链表中的重复元素I](#83-删除排序链表中的重复元素i)
   - [82. 删除排序链表中的重复元素II **](#82-删除排序链表中的重复元素ii-)
   - [面试题02.01.  移除重复节点 （非排序链表）](#面试题0201--移除重复节点-非排序链表)
+  - [203. 移除链表元素](#203-移除链表元素)
   - [237. 删除链表指定节点](#237-删除链表指定节点)
 - [链表翻转与旋转操作](#链表翻转与旋转操作)
   - [61. 旋转链表](#61-旋转链表)
@@ -597,6 +598,36 @@ public:
             }
         }
         return head;
+    }
+};
+```
+### 203. 移除链表元素
+> 给你一个链表的头节点 head 和一个整数 val ，请你删除链表中**所有满足 Node.val == val 的节点**，并**返回新的头节点**.
+
+- 典型的链表删除操作，两把刷子： **prev 和 cur指针**
+- 需要返回头节点的情况下，使用**dummy node**, **使用dummy node会简化非常多的逻辑判断**
+- 关键点： **`删除操作`**   **`dummpy nodes`**
+```c++
+class Solution {
+public:
+    ListNode* removeElements(ListNode* head, int val) {
+        if (!head) return nullptr;
+        ListNode* phead = new ListNode();
+        ListNode* p = phead;
+        p -> next = head;
+        p = p -> next;
+        ListNode* prev = phead;
+        while (p) {
+            if (p -> val == val) {
+                prev -> next = p -> next;
+                p = p -> next;
+            }
+            else {
+                prev = p;
+                p = p -> next;
+            }
+        }
+        return phead -> next;
     }
 };
 ```
