--- a/leetcode/树结构/初级树结构.md
+++ b/leetcode/树结构/初级树结构.md
@@ -53,6 +53,7 @@
   - [110. 平衡二叉树的判断](#110-平衡二叉树的判断)
   - [404. 左叶子之和](#404-左叶子之和)
   - [199. 二叉树的右视图](#199-二叉树的右视图)
+  - [450. 删除二叉搜索树中的节点 *](#450-删除二叉搜索树中的节点-)
   - [617. 合并二叉树](#617-合并二叉树)
   - [958. 二叉树的完全性校验](#958-二叉树的完全性校验)
   - [129. 求根节点到叶子节点数字之和](#129-求根节点到叶子节点数字之和)
@@ -1255,6 +1256,51 @@ public:
             return ans;
         dfs(root, 0 );
         return ans;
+    }
+};
+```
+
+### 450. 删除二叉搜索树中的节点 *
+> 给定一个二叉搜索树的根节点 root 和一个值 key，**删除二叉搜索树中的 key 对应的节点，并保证二叉搜索树的性质不变**。返回二叉搜索树（有可能被更新）的根节点的引用。
+
+- 经典的二叉树删除问题， 考虑二叉搜索树的特性
+- 关键点在于删除节点后如何替换节点，
+  - 可以使用右子树的最小节点替代当前root： 搜索子树的最小值， 然后再在右子树进行删除操作
+  - 或者使用左子树的最大节点替代当前root： 搜索子树的最大值， 然后再在左子树进行删除操作
+
+```c++
+class Solution {
+public:
+    int getMin(TreeNode* root) {
+        if (!root) return INT_MAX;
+        return min(root -> val, min(getMin(root -> left), getMin(root -> right)));
+    }
+    TreeNode* deleteNode(TreeNode* root, int key) {
+        if (!root) return nullptr;
+        // 删除的情况
+        if (root -> val == key) {
+            if (!root -> left && !root -> right) {
+                return nullptr;
+            }
+            if (!root -> left) {
+                return root -> right;
+            }
+            if (!root -> right) {
+                return root -> left;
+            }
+            // 使用右子树的最小值来替代删除节点 或者 使用左子树的最大值来替代
+            int minVal = getMin(root -> right);
+            root -> val = minVal;
+            // 递归删除后面要替换的节点 key = minVal; 
+            root -> right = deleteNode(root -> right, minVal);
+        }
+        else if (root -> val < key) {
+            root -> right = deleteNode(root -> right, key);
+        }
+        else {
+            root -> left = deleteNode(root -> left, key);
+        }
+        return root;
     }
 };
 ```
