--- a/leetcode/树结构/初级树结构.md
+++ b/leetcode/树结构/初级树结构.md
@@ -39,6 +39,7 @@
   - [108. 有序数组转搜索二叉树 [KEY]](#108-有序数组转搜索二叉树-key)
   - [106.从中序和后序中构建二叉树](#106从中序和后序中构建二叉树)
   - [先序加中序构建二叉树](#先序加中序构建二叉树)
+  - [889. 先序加后序构建二叉树](#889-先序加后序构建二叉树)
   - [116. 填充每个节点的下一个右侧节点指针 I](#116-填充每个节点的下一个右侧节点指针-i)
   - [117. 填充每个节点的下一个右侧节点指针 II](#117-填充每个节点的下一个右侧节点指针-ii)
   - [二叉树的最近公共祖先](#二叉树的最近公共祖先)
@@ -705,6 +706,37 @@ public:
 };
 ```
 
+### 889. 先序加后序构建二叉树
+> 返回与给定的前序和后序遍历匹配的任何二叉树。pre 和 post 遍历中的值是不同的正整数。
+
+- 基于先序和后序的关键在于如何**定位后面要搜索的左子树和右子树空间**
+
+```c++
+class Solution {
+public:
+    TreeNode* build(vector<int>& pre, vector<int>& post, int pre_start, int pre_end, int post_start, int post_end) {
+        if (pre_start > pre_end || post_start > post_end) {
+            return nullptr;
+        }
+        TreeNode* root = new TreeNode(pre[pre_start]);
+        if (pre_start == pre_end)  return root;
+        int index = post_start;
+        while (pre[pre_start + 1] != post[index]) {
+            index++;
+        }
+        int len = index - post_start;
+        // 根据先序寻找左子树的根节点， 并找到对应在后序节点位置y， 由于后序遍历的特殊性该位置前面连续位置都为左子树节点，后面则为右子树的节点
+        // 根据这个逻辑确定每次搜索左子树区间 和 右子树对应的空间 
+        root -> left = build(pre, post, pre_start + 1, pre_start + 1 + len, post_start, index);
+        root -> right = build(pre, post, pre_start + 1 + len + 1, pre_end, index + 1, post_end - 1);
+        return root;
+    }
+    TreeNode* constructFromPrePost(vector<int>& pre, vector<int>& post) {
+        return build(pre, post, 0, pre.size() - 1, 0, post.size() - 1);
+    }
+};
+```
+
 ### 116. 填充每个节点的下一个右侧节点指针 I
 > 填充它的每个 next 指针，让这个指针指向其下一个右侧节点。如果找不到下一个右侧节点，则将 next 指针设置为 NULL。 （**给的是完全二叉树**）
 
@@ -1265,8 +1297,9 @@ public:
 
 - 经典的二叉树删除问题， 考虑二叉搜索树的特性
 - 关键点在于删除节点后如何替换节点，
-  - 可以使用右子树的最小节点替代当前root： 搜索子树的最小值， 然后再在右子树进行删除操作
+  - 可以**使用右子树的最小节点**替代当前root： **搜索子树的最小值， 然后再在右子树进行删除操作**
   - 或者使用左子树的最大节点替代当前root： 搜索子树的最大值， 然后再在左子树进行删除操作
+- 关键点： **`替代操作`**
 
 ```c++
 class Solution {
