--- a/leetcode/字符串/初级字符串.md
+++ b/leetcode/字符串/初级字符串.md
@@ -12,6 +12,7 @@
   - [415. 字符串相加](#415-字符串相加)
   - [补充. 字符串相减（大数减法）](#补充-字符串相减大数减法)
   - [344.反转字符串](#344反转字符串)
+  - [剑指 Offer 58 - II. 左旋转字符串](#剑指-offer-58---ii-左旋转字符串)
   - [151. 翻转字符串的单词](#151-翻转字符串的单词)
   - [557. 反转字符串中的单词III](#557-反转字符串中的单词iii)
   - [387. 字符串中的唯一字符](#387-字符串中的唯一字符)
@@ -422,6 +423,35 @@ public:
             end--;
         }
 
+    }
+};
+```
+
+### 剑指 Offer 58 - II. 左旋转字符串
+> 定义一个函数实现字符串左旋转操作的功能。比如，输入字符串"abcdefg"和数字2，该函数将返回左旋转两位得到的结果"cdefgab"。
+
+- 旋转/翻转操作，可以通过三次翻转来得到最后的结果
+- 时间复杂度 O(N) 空间复杂度O(1)
+- 可以通过调用api 或者自己实现reverse来完成
+    - 注意reverse中循环终止的条件, **采用左闭右开的形式**， 也可以通过双指针来实现
+
+```c++
+class Solution {
+public:
+    void _reverse(string& s, int start, int end) {
+        for (int i = start; i <= (end + start) / 2; i++) {
+            swap(s[i], s[start + end - i]);
+        }
+    }
+    string reverseLeftWords(string s, int n) {
+        _reverse(s, 0, s.size());
+        _reverse(s, 0, s.size() - n);
+        _reverse(s, s.size() - n, s.size());
+
+        // reverse(s.begin(), s.end());
+        // reverse(s.begin(), s.begin() + s.size() - n);
+        // reverse(s.begin() + s.size() - n, s.end());
+        return s;
     }
 };
 ```
