--- a/leetcode/查找/二分查找.md
+++ b/leetcode/查找/二分查找.md
@@ -19,8 +19,9 @@
   - [287. 寻找重复数](#287-寻找重复数)
   - [719. 寻找第k小的距离对 [KEY]](#719-寻找第k小的距离对-key)
   - [410. 分割数组的最大值 [KEY]](#410-分割数组的最大值-key)
+  - [补充题目： 木头切割问题 *](#补充题目-木头切割问题-)
   - [29. 两数相除 [Medium]](#29-两数相除-medium)
-  - [byteDance 补充题目： 木头切割问题](#bytedance-补充题目-木头切割问题)
+  - [1095. 山脉数组中查找目标值](#1095-山脉数组中查找目标值)
 - [总结体会](#总结体会)
 
 ## 基础题目
@@ -1054,7 +1055,8 @@ public:
 - 时间复杂度： O(NlogN + NlogW) : 包括两个部分：数组排序部分 和  二分查找部分
 
 
-```class Solution {
+```c++
+class Solution {
 public:
     int smallestDistancePair(vector<int>& nums, int k) {
         if (nums.empty()) 
@@ -1083,55 +1085,68 @@ public:
 ```
 
 ### 410. 分割数组的最大值 [KEY]
-- hard模式
-- 将无序数组划分为m个连续子序列，计算最小的分割序列最大值
+> 给定一个非负整数数组 nums 和一个整数 m ，你需要将这个数组分成 m 个非空的连续子数组。设计一个算法使得这 m 个子数组各自和的最大值最小。
+
+
+- 将**无序数组划分为m个连续子序列，计算最小的分割序列最大值**
 - 采用动态规划或者二分查找法
 - **二分查找法适用于计算最小的最大值的问题**
     - 搜索空间为`[max, sum]`数组最大值和数组元素之和
-    - 每次判断目标值作为最小的最大值时，有多少个子序列满足要求(通过贪心的方式计算)，即计算cnt，与前两题目有相似之处。
+    - **每次判断目标值作为最小的最大值时，有多少个子序列满足要求(通过贪心的方式计算)，即计算cnt，与前两题目有相似之处**。
     - 在计算cnt时，需要注意初始值⚠️。
     - 时间复杂度为： O(N*log(sum - max))
-```class Solution {
+
+- 关键点： **`二分查找的拓展 · 搜索空间设置 · 判断条件设置`**
+```c++
+class Solution {
 public:
-    bool check(vector<int>& nums, int x, int m) {
-        int cnt = 1; // 根据判断条件
-        long long sum = 0;
-        for ( auto i : nums) {
-            if (sum + i > x) {
-                sum = i;
-                cnt ++;
+    // 判断有多少个连续子数组和小于目标值
+    bool check(vector<int>& nums, int target, int m) {
+        long sum = 0;
+        int cnt = 1; // 默认为1, 即没有划分的情况
+        for (auto p : nums) {
+            if (p + sum > target) {
+                sum = p;
+                cnt++;
             }
             else {
-                sum += i;
+                sum += p;
             }
         }
         return cnt <= m;
     }
     int splitArray(vector<int>& nums, int m) {
-        int left = 0;
-        int right = 0;
-        for (auto i : nums) {
-            if (i > left) 
-                left = i;
-            right += i;
+        long sum = 0;
+        int maxN = 0;
+        for (auto p : nums) {
+            sum += p;
+            maxN = max(maxN, p);
         }
+        long left = maxN;
+        long right = sum;
         while (left < right) {
-            int mid = left + (right - left) / 2;
-            if (check(nums, mid, m))
-                right = mid;
-            else 
+            long mid = left + (right - left) / 2;
+            // 当满足条件的子数组数量小于m时，需要缩小搜索
+            if (check(nums, mid, m)) {
+                right = mid; 
+            }
+            // 当满足条件的子数组数量大于m时，需要调大值， 即当前值不是和的最大值，是小值
+            else {
                 left = mid + 1;
+            }
         }
         return left;
     }
 };
 ```
+- **二分比动态规划要更容易掌握，也是解决这类题目真正的考察点**
 - 其他思路： **动态规划**
 - 动态规划状态公式： 将i个数分割为j个子序列的最优值：$dp[i][j]= min_{k=0}^{i-1} max(dp[k][j-1],sub(k+1,i))$其中$i>=j$, 结果为dp[n][m]
 - 注意创建dp二维状态数组的大小和初始化情况。
 
 
-```class Solution {
+```c++
+class Solution {
 public:
     int splitArray(vector<int>& nums, int m) {
         int n = nums.size();
@@ -1156,6 +1171,54 @@ public:
 };
 ```
 
+### 补充题目： 木头切割问题 *
+> 给定长度为n的数组，每个元素代表一个木头的长度，木头可以任意截断，从这堆木头中截出至少k个相同长度为m的木块。已知k，求max(m)。
+> 输入两行，第一行n, k，第二行为数组序列。输出最大值
+
+- 与[`LC410.分割数组的最大值`]有相似之处
+- 基本操作： 暴力方法：从1 ～ maxLen进行遍历，判断是否满足有k个元素大/等于该值
+- 二分法，搜索空间[1, maxLen]， 边界要求，寻找最大右边界
+    - 是对二分查找的灵活应用
+    - 时间复杂度 O（N*logN）
+    - 细节是魔鬼: **需要注意check的时候计算num的方式，一个木头可能分出多段目标长度**
+
+```c++
+bool check(vector<int> arr, int k, int length) {
+    int num = 0;
+    
+    for (int i = 0; i < arr.size(); i++) {
+        //cout << arr[i] << " ";
+        if (arr[i] >= length)
+            num += (arr[i]/length);
+        //cout << num << " ";
+    }
+    //cout << endl;
+    cout << "length: " << length << ' ' << num << endl;
+    return num >= k;
+}
+
+int findMaxLen(vector<int> arr, int k) {
+    int l = 1;
+    int r = 1;
+    for (int i = 0; i<arr.size(); i++) {
+        r = max(r, arr[i]);
+    }
+    cout << l << ' ' << r << endl;
+    while(l <= r) {
+        int mid = l + (r - l) / 2; 
+        cout << 'm' << mid << endl;
+        cout << check(arr, k , mid ) << endl;
+        if (check(arr, k, mid)) {
+            l = mid + 1;
+        }
+        else {
+            r= mid - 1;
+        }
+        cout << "l: " << l << " r :" << r  << endl;
+    }
+    return r;
+}
+```
 ### 29. 两数相除 [Medium]
 - 同样是二分思想的利用，特点在于二分倍增
 - 不用* / 运算符实现整数除法，即比较除数与被除数的大小，对除数进行倍增处理，当倍增值超过被除数时进行调整，对剩下的被除数/余数继续与除数进行倍增比较
@@ -1193,54 +1256,74 @@ public:
     }
 };
 ```
-### byteDance 补充题目： 木头切割问题 
-> 给定长度为n的数组，每个元素代表一个木头的长度，木头可以任意截断，从这堆木头中截出至少k个相同长度为m的木块。已知k，求max(m)。
-> 输入两行，第一行n, k，第二行为数组序列。输出最大值
 
-- 基本操作： 暴力方法：从1 ～ maxLen进行遍历，判断是否满足有k个元素大/等于该值
-- 二分法，搜索空间[1, maxLen]， 边界要求，寻找最大右边界
-    - 是对二分查找的灵活应用
-    - 时间复杂度 O（N*logN）
-    - 细节是魔鬼： **需要注意check的时候计算num的方式，一个木头可能分出多段目标长度**；
+### 1095. 山脉数组中查找目标值
+> 山脉数组即**满足先升序后降序的数组**，在**单调区间内元素不重复**
 
-```
-bool check(vector<int> arr, int k, int length) {
-    int num = 0;
-    
-    for (int i = 0; i < arr.size(); i++) {
-        //cout << arr[i] << " ";
-        if (arr[i] >= length)
-            num += (arr[i]/length);
-        //cout << num << " ";
-    }
-    //cout << endl;
-    cout << "length: " << length << ' ' << num << endl;
-    return num >= k;
-}
+- 由于数组的特殊性，直接用一遍二分法难以得到结果
+- 因此可以将问题进行拆分：
+    - 首先**找到山顶位置 peak**， 通过二分法查找即可
+    - 然后在升序段进行二分搜索
+    - 如果前面没有找到，再到降序段进行二分搜索
+- 总体时间复杂度 O(logN) 空间复杂度O(1)
+- 关键点： **`问题拆分`**  ****`二分法模板`****
 
+```c++
+/**
+ * // This is the MountainArray's API interface.
+ * // You should not implement it, or speculate about its implementation
+ * class MountainArray {
+ *   public:
+ *     int get(int index);
+ *     int length();
+ * };
+ */
 
-int findMaxLen(vector<int> arr, int k) {
-    int l = 1;
-    int r = 1;
-    for (int i = 0; i<arr.size(); i++) {
-        r = max(r, arr[i]);
-    }
-    cout << l << ' ' << r << endl;
-    while(l <= r) {
-        int mid = l + (r - l) / 2; 
-        cout << 'm' << mid << endl;
-        cout << check(arr, k , mid ) << endl;
-        if (check(arr, k, mid)) {
-            l = mid + 1;
+class Solution {
+public:
+    int binarySearch(int target, MountainArray &mountainArr, int left, int right, int dir) {
+        while (left <= right) {
+            int mid = left + (right - left)/ 2;
+            int midA =  mountainArr.get(mid);
+            if (midA == target) {
+                return mid;
+            }
+            if (midA < target) {
+                if (dir) 
+                    left = mid + 1;
+                else 
+                    right = mid - 1;
+            }
+            else {
+                if (dir)
+                    right = mid - 1;
+                else 
+                    left = mid + 1;
+            }
+            //cout << left << "-" << right << endl;
         }
-        else {
-            r= mid - 1;
-        }
-        cout << "l: " << l << " r :" << r  << endl;
+        return -1;
     }
-    return r;
-}
-
+    int findInMountainArray(int target, MountainArray &mountainArr) {
+        int left = 0;
+        int right = mountainArr.length() - 1;
+        while (left <= right) {
+            int mid = left + (right - left)/ 2;
+            int midA =  mountainArr.get(mid);
+            if (midA < mountainArr.get(mid + 1)) {
+                left = mid + 1;
+            }
+            else {
+                right = mid - 1;
+            }
+        }
+        // cout << "peak" << left << endl;
+        int index = binarySearch(target, mountainArr, 0, left, 1);
+        if (index != -1) 
+            return index;
+        return binarySearch(target, mountainArr, left + 1, mountainArr.length() - 1, 0);
+    }
+};
 ```
 
 ## 总结体会
