--- a/leetcode/动态规划/动态规划-初级.md
+++ b/leetcode/动态规划/动态规划-初级.md
@@ -24,6 +24,7 @@
   - [63. 不同路径 2](#63-不同路径-2)
   - [980. 不同路径 3 [Hard]](#980-不同路径-3-hard)
   - [322. 零钱兑换 [Medium]](#322-零钱兑换-medium)
+  - [518. 零钱兑换 II](#518-零钱兑换-ii)
   - [300. 最长上升子序列 (LIS)](#300-最长上升子序列-lis)
   - [354. 俄罗斯套娃信封](#354-俄罗斯套娃信封)
   - [221. 最大正方形](#221-最大正方形)
@@ -783,7 +784,7 @@ public:
   - **其他元素初始为`amount + 1`**, 直接初始化为最大值，会在计算最小值chubug
 - 时间复杂度 O(nS) 空间复杂度 O(n)
 - 关键点： **`状态初始化小技巧`**
-```
+```c++
 class Solution {
 public:
     int coinChange(vector<int>& coins, int amount) {
@@ -811,6 +812,74 @@ public:
     }
 };
 ```
+
+### 518. 零钱兑换 II
+> **给定不同面额的硬币和一个总金额**。写出函数来计算可以凑成总金额的硬币组合数。假设每一种面额的硬币有无限个。 
+
+- 比前面一题要复杂一些：
+- 定义`dp[k][i]`表示k种硬币兑换i的组合数
+- 那么状态转移公式为 `dp[k][i] = dp[k - 1][i] + d[k][i - k]`
+  - 前k个硬币凑齐金额i的组合数等于**前k-1个硬币凑齐金额i的组合数加上在原来i-k的基础上使用硬币的组合数**。
+  - 即要分为两种情况：
+    - 一种是**只用前k-1个硬币就凑齐了**，
+    - 一种是**前面已经凑到了i-coins[k]**，现在就差第k个硬币了。
+- 注意初始化dp[k][0]为1
+- 下面的内外循环顺序可以交换，结果不变
+```c++
+class Solution {
+public:
+    
+    int change(int amount, vector<int>& coins) {
+        // dp[k][i] : k种硬币构成金额i的组合数量
+        vector<vector<int>> dp(coins.size() + 1, vector<int>(amount + 1));
+        for (int k = 0; k < coins.size() + 1; k++) {
+            dp[k][0] = 1;
+        }
+        for (int k = 1; k <= coins.size(); k++) {
+            for (int i = 1; i <= amount; i++) {
+                if (i >= coins[k - 1]) {
+                    dp[k][i] = dp[k][i - coins[k - 1]] + dp[k - 1][i];
+                }
+                else { // 当前目标钱数要小于新加入的硬币， 所以没法加入当前的硬币k
+                    dp[k][i] = dp[k - 1][i];
+                }
+            }
+        }
+        return dp[coins.size()][amount];
+    }
+};
+```
+- 将二维数组压缩到一维数组，取amout维度的一维数组, 代码简化如下；通过滚动数组实现了空间压缩
+- 问题在于： **此时的内外循环次序可以交换么？** **不可以！** 交换的本质就是在改变dp的更新顺序，对于vector<int> dp(amount + 1);， 两维情况下，更新依赖于左侧和上方的数据
+  - 而现在的一维也是行方向的数据即从左到右遍历而来，交换次序后同一位置上的数据是自上而下的遍历更新
+  - 那么就会出现结果错误
+
+```c++
+class Solution {
+public:
+    
+    int change(int amount, vector<int>& coins) {
+        // dp[k][i] : k种硬币构成金额i的组合数量
+        vector<int> dp(amount + 1);
+        for (int k = 0; k < coins.size() + 1; k++) {
+            dp[0] = 1;
+        }
+        for (int k = 1; k <= coins.size(); k++) {
+            for (int i = 1; i <= amount; i++) {
+                if (i < coins[k - 1]) {
+                    continue;
+                }
+                else { // 当前目标钱数要小于新加入的硬币， 所以没法加入当前的硬币k
+                    dp[i] += dp[i - coins[k - 1]];
+                }
+            }
+        }
+        return dp[amount];
+    }
+};
+```
+
+
 
 ### 300. 最长上升子序列 (LIS)
 - 基础DP思路
