--- a/leetcode/数组/初级链表.md
+++ b/leetcode/数组/初级链表.md
@@ -9,6 +9,7 @@
 - [查找节点](#查找节点)
   - [2. 两数相加](#2-两数相加)
   - [剑指22. 链表中倒数第k个节点](#剑指22-链表中倒数第k个节点)
+  - [138. 复制带随机指针的链表](#138-复制带随机指针的链表)
   - [141. 环形链表操作](#141-环形链表操作)
   - [142. 环形链表2 [Medium]](#142-环形链表2-medium)
   - [160. 相交链表](#160-相交链表)
@@ -142,6 +143,45 @@ public:
             slow = slow -> next;
         }
         return slow;
+    }
+};
+```
+
+### 138. 复制带随机指针的链表
+> 给你一个长度为 n 的链表，每个节点包含一个额外增加的随机指针 random ，该指针可以指向链表中的任何节点或空节点. 进行深拷贝，重新构建一个链表
+
+- 由于random指针指向，单次遍历构建比较复杂
+- 可以借助哈希表存储两个链表间的节点映射，在创建完成后再遍历一遍添加random指针连接
+- 关键点： **`哈希表`**
+
+```c++
+class Solution {
+public:
+    Node* copyRandomList(Node* head) {
+        if (!head) return nullptr;
+        unordered_map<Node*, Node*> tmp;
+        Node* prev = nullptr;
+        Node* newHead = nullptr;
+        Node* p = head;
+        while (p) {
+            Node* cur = new Node(p -> val);
+            tmp[p] = cur;
+            if (prev) {
+                prev -> next = cur;
+            }
+            else {
+                newHead = cur;
+            }
+            prev = cur;
+            p = p -> next;
+        }
+        prev -> next = nullptr;
+        p = head;
+        while (p) {
+            tmp[p] -> random = tmp[p -> random];
+            p = p -> next;
+        }
+        return newHead;
     }
 };
 ```
